--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-Pinball table editor
+# Pinball table editor #
+
+[![Get it from the Snap Store](https://snapcraft.io/static/images/badges/en/snap-store-black.svg)](https://snapcraft.io/pinedit)
+
 
 Read doc/index.html or doc/manual.html
 
